CARS TO SELL: added Frogeye, TR5 and Corvette
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@88 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
@@ -76,7 +76,7 @@
 					<hr/>
                                         <?php
                                             $tr5 = new Car("TR5_left.JPG", "Triumph TR5 1968");
-                                            $tr5->setOtherPictures(array("TR5_arriere.JPG", "TR5_ciel.JPG", "TR5_droite.JPG", "TR5_interieur.JPG", "TR5_moteur.JPG", "TR5_portiere.JPG"));
+                                            $tr5->setOtherPictures(array("TR5_arriere.jpg", "TR5_ciel.JPG", "TR5_droite.jpg", "TR5_interieur.jpg", "TR5_moteur.jpg", "TR5_portiere.JPG"));
                                         ?>
                                                 <div class="vente-titre">
                                                     <a rel="tr5" href="<?php echo $tr5->getImage("img/ventes/TR5_1968/"); ?>" title="<?php echo $tr5->getLabel(); ?>">
@@ -103,7 +103,7 @@
 					<hr/>
                                         <?php
                                             $corvette = new Car("Corvette_AVD.jpg", "Chevrolet Corvette 1958");
-                                            $corvette->setOtherPictures(array("Corvette_avant.jpg", "Corvette_droite.jpg", "Corvette_gauche.jpg"));
+                                            $corvette->setOtherPictures(array("Corvette_avant.jpg", "Corvette_droite.JPG", "Corvette_gauche.JPG"));
                                         ?>
                                                 <div class="vente-titre">
                                                     <a rel="corvette" href="<?php echo $corvette->getImage("img/ventes/Corvette_1958/"); ?>" title="<?php echo $corvette->getLabel(); ?>">
