--- a/ classicetsportautos --username classicetsportautos@gmail.com/index.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/index.html
@@ -1,72 +1,7 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html>
-<head>
-<?php include 'includes/metas.inc.php'; ?>
+<?php
+include 'utils/CSAUtils.php';
 
-<meta name="description" content="Classic & Sport Autos entretien et la r&eacute;paration de voitures de collection
-					avec sp&eacute;cialit&eacute; en voitures anglaises, Jaguar, Lotus, Austin Healey, MG, Triumph...
-					mais ouvert aussi aux autres v&eacute;hicules de collection, en particulier italiens, Alfa Rom&eacute;o, Ferrari, Fiat, Lancia...
-					J'aide aussi mes clients à acheter ou à vendre leur véhicule ancien.">
-<meta name="keywords" content="entretien autos anciennes, r&eacute;pare et pr&eacute;pare votre  voiture ancienne, r&eacute;paration, pr&eacute;paration, anglaises, italiennes">
-
-<title>Classic & Sport Autos - Entretien et Réparation de Voitures de Collection</title>
-<link rel="shortcut icon" href="images/csa.ico">
-<link rel="stylesheet" type="text/css" media="screen" href="css/init.css">
-<link rel="stylesheet" type="text/css" media="screen" href="css/layout.css">
-<link rel="stylesheet" type="text/css" media="screen" href="css/csa.css">
-<link rel="stylesheet" type="text/css" media="screen" href="css/ju2com.css">
-<link rel="stylesheet" type="text/css" media="print" href="css/csa.css">
-
-<?php include 'includes/index_head.inc.php'; ?>
-</head>
-
-<body>
-	<div class="background">
-	<div class="container">
-		<div class="wrapper">
-			<div class="head">
-                                <?php $highlight = 'accueil'; ?>
-                                <?php include 'includes/top.inc.php'; ?>
-
-                            <div class="espacepromo">
-
-				<ul class="slideshow">
-                                    <li class="show"><a href="#"><img src="img/panoramaNewYear2012_2.jpg" width="858" height="250" title="Bonne année 2012" alt=""/></a></li>
-                                    <li><a href="#"><img src="img/PanoramaCSAanniv_1.jpg" width="858" height="250" title="1er anniversaire de Classic & Sport Autos" alt=""/></a></li>
-                                    <li><a href="#"><img src="img/bandeauDevantGarage.jpg" width="858" height="250" title="" alt=""/></a></li>
-				</ul>
-
-				</div>
-			</div>
-
-			<div class="col260">
-				<h1>Nos prestations</h1>
-				<p>
-					Nos activités principales &agrave; Classic & Sport Autos sont
-					l'entretien, la réparation, la mise au point et l'amélioration de
-					performances de voitures de collection.
-				</p>
-				<p>
-					Nous sommes spécialisés en voitures anglaises, <i>Jaguar, Aston Martin,
-					Lotus, Austin Healey, MG, Triumph...</i> mais nous entretenons aussi d'autres
-					véhicules de collection, en particulier italiens, <i>Alfa Roméo, Ferrari, Fiat, Lancia...</i>
-				</p>
-				<a class="plus" href="engagements.html">Lire la suite >></a>                            
-    <br/><br/>
-                        <?php include 'includes/atelierWidget.inc.php'; ?>
-                        </div>
-                                
-			<div>
-                            <div id="fb-root"></div>
-                            <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
-                            <fb:like-box href="https://www.facebook.com/pages/Classic-Sport-Autos/124036417669507" width="560" show_faces="false" stream="true" header="false"></fb:like-box>
-			</div>
-
-			<div class="clearit"></div>
-		</div>
-                <?php include 'includes/bottom.inc.php'; ?>
-	</div><!--fin container-->
-	</div><!--fin background-->
-</body>
-</html>
+include CSAUtils::getCountry().'/properties/messagesIndex.php';
+include CSAUtils::getCountry().'/properties/messagesMenu.php';
+include CSAUtils::getCountry().'/properties/messagesFooter.php';
+include 'index.php';
