set show faces to false. Setting a height for the plugin fixes the display pb of the stream Added 'Attention' message to tell people that CSA address has changed Added Bourse Auto Rétro Chambéry to the bottom list of links
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@133 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/index.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/index.html
@@ -4,4 +4,5 @@ include 'utils/CSAUtils.php';
 include CSAUtils::getCountry().'/properties/messagesIndex.php';
 include CSAUtils::getCountry().'/properties/messagesMenu.php';
 include CSAUtils::getCountry().'/properties/messagesFooter.php';
+include CSAUtils::getCountry().'/properties/messagesContact.php';
 include 'index.php';
